src/network/createvnet.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "vnetName": {
        "type": "string",
        "defaultValue": "VNet1",
        "metadata": {
          "description": "VNet name"
        }
      },
      "vnetAddressPrefix": {
        "type": "string",
        "defaultValue": "10.0.0.0/16",
        "metadata": {
          "description": "Address prefix"
        }
      },
      "subnet1Prefix": {
        "type": "string",
        "defaultValue": "10.0.0.0/24",
        "metadata": {
          "description": "Subnet 1 Prefix"
        }
      },
      "subnet1Name": {
        "type": "string",
        "defaultValue": "Subnet1",
        "metadata": {
          "description": "Subnet 1 Name"
        }
      },
      "subnet2Prefix": {
        "type": "string",
        "defaultValue": "10.0.1.0/24",
        "metadata": {
          "description": "Subnet 2 Prefix"
        }
      },
      "subnet2Name": {
        "type": "string",
        "defaultValue": "Subnet2",
        "metadata": {
          "description": "Subnet 2 Name"
        }
      },
      "subnet3Prefix": {
        "type": "string",
        "defaultValue": "10.0.1.0/24",
        "metadata": {
          "description": "Subnet 3 Prefix"
        }
      },
      "subnet3Name": {
        "type": "string",
        "defaultValue": "Subnet2",
        "metadata": {
          "description": "Subnet 3 Name"
        }
      },      
      "subnet4Prefix": {
        "type": "string",
        "defaultValue": "10.0.1.0/24",
        "metadata": {
          "description": "Subnet 4 Prefix"
        }
      },
      "subnet4Name": {
        "type": "string",
        "defaultValue": "Subnet2",
        "metadata": {
          "description": "Subnet 4 Name"
        }
      },     
      "subnet5Prefix": {
        "type": "string",
        "defaultValue": "10.0.1.0/24",
        "metadata": {
          "description": "Subnet 5 Prefix"
        }
      },
      "subnet5Name": {
        "type": "string",
        "defaultValue": "Subnet2",
        "metadata": {
          "description": "Subnet 5 Name"
        }
      },           
      "subnet6Prefix": {
        "type": "string",
        "defaultValue": "10.0.1.0/24",
        "metadata": {
          "description": "Subnet 6 Prefix"
        }
      },
      "subnet6Name": {
        "type": "string",
        "defaultValue": "Subnet2",
        "metadata": {
          "description": "Subnet 6 Name"
        }
      },           
      "subnet7Prefix": {
        "type": "string",
        "defaultValue": "10.0.1.0/24",
        "metadata": {
          "description": "Subnet 7 Prefix"
        }
      },
      "subnet7Name": {
        "type": "string",
        "defaultValue": "Subnet7",
        "metadata": {
          "description": "Subnet 7 Name"
        }
      },                 
      "subnet8Prefix": {
        "type": "string",
        "defaultValue": "10.0.1.0/24",
        "metadata": {
          "description": "Subnet 8 Prefix"
        }
      },
      "subnet8Name": {
        "type": "string",
        "defaultValue": "Subnet8",
        "metadata": {
          "description": "Subnet 8 Name"
        }
      },                       
      "subnet9Prefix": {
        "type": "string",
        "defaultValue": "10.0.1.0/24",
        "metadata": {
          "description": "Subnet 9 Prefix"
        }
      },
      "subnet9Name": {
        "type": "string",
        "defaultValue": "Subnet9",
        "metadata": {
          "description": "Subnet 9 Name"
        }
      },      
      "subnet10Prefix": {
        "type": "string",
        "defaultValue": "10.0.1.0/24",
        "metadata": {
          "description": "Subnet 10 Prefix"
        }
      },
      "subnet10Name": {
        "type": "string",
        "defaultValue": "Subnet9",
        "metadata": {
          "description": "Subnet 10 Name"
        }
      },   
      "subnet11Prefix": {
        "type": "string",
        "defaultValue": "10.0.1.0/24",
        "metadata": {
          "description": "Subnet 11 Prefix"
        }
      },
      "subnet11Name": {
        "type": "string",
        "defaultValue": "Subnet9",
        "metadata": {
          "description": "Subnet 11 Name"
        }
      },         
      "location": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Location for all resources."
        }
      },
      "asgWeb": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Web application security group."
        }
      },
      "asgApp": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "App application security group."
        }
      },
      "asgProc": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Proc application security group."
        }
      },
      "asgDB": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "DB application security group."
        }
      },
      "nsgWebName": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Name of web network security group."
        }
      },
      "nsgAppName": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Name of app network security group."
        }
      },
      "nsgDBName": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Name of DB network security group."
        }
      },
      "nsgPROCName": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Name of PROC network security group."
        }
      },
      "tagValues": {
        "type": "object",
        "defaultValue": {
          "Commerce": "VNET",
          "WVClientType": "Production",
          "WVenvironment": "V2"
        }
      }
    },
    "variables": {
      "nsgWebId": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('nsgWebName'))]",
      "nsgAppId": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('nsgAppName'))]",
      "nsgDBId": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('nsgDBName'))]",
      "nsgPROCId": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('nsgPROCName'))]"
    },
    "resources": [
        {
            "comments": "Application Security Group",
            "name": "[parameters('asgWeb')]",
            "type": "Microsoft.Network/applicationSecurityGroups",
            "apiVersion": "2017-10-01",
            "location": "[parameters('location')]",
            "properties": {}
        },  
        {
            "comments": "Application Security Group",
            "name": "[parameters('asgApp')]",
            "type": "Microsoft.Network/applicationSecurityGroups",
            "apiVersion": "2017-10-01",
            "location": "[parameters('location')]",
            "properties": {}
        },  
        {
            "comments": "Application Security Group",
            "name": "[parameters('asgProc')]",
            "type": "Microsoft.Network/applicationSecurityGroups",
            "apiVersion": "2017-10-01",
            "location": "[parameters('location')]",
            "properties": {}
        },  
        {
            "comments": "Application Security Group",
            "name": "[parameters('asgDB')]",
            "type": "Microsoft.Network/applicationSecurityGroups",
            "apiVersion": "2017-10-01",
            "location": "[parameters('location')]",
            "properties": {}
        },  
        {
            "comments": "Network Security Group",
            "name": "[parameters('nsgWebName')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2017-09-01",
            "location": "[parameters('location')]",
            "dependsOn": [
              "[parameters('asgWeb')]"
            ],
            "properties": {
              "securityRules": [
                {
                  "name": "AllowHttpAll",
                  "properties": {
                    "description": "Allow http traffic to web servers",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "direction": "Inbound",
                    "access": "Allow",
                    "priority": 100,
                    "protocol": "Tcp",
                    "destinationPortRange": "80",
                    "destinationApplicationSecurityGroups": [
                      {
                        "id": "[resourceId('Microsoft.Network/applicationSecurityGroups',parameters('asgWeb'))]"
                      }
                    ]
                  }
                },
                {
                  "name": "AllowRDP",
                  "properties": {
                    "description": "Default Allow RDP",
                    "sourceAddressPrefixes": [
                      "192.168.4.0/24",
                      "10.10.0.0/24"
                    ],
                    "sourcePortRange": "*",
                    "direction": "Inbound",
                    "access": "Allow",
                    "priority": 200,
                    "protocol": "Tcp",
                    "destinationPortRange": "3389",
                    "destinationAddressPrefix": "*"
                  }
                },
                {
                  "name": "AllowRDP2",
                  "properties": {
                    "description": "Default Allow RDP2",
                    "sourceAddressPrefixes": [
                      "192.168.254.0/24"
                    ],
                    "sourcePortRange": "*",
                    "direction": "Inbound",
                    "access": "Allow",
                    "priority": 210,
                    "protocol": "Tcp",
                    "destinationPortRange": "3389",
                    "destinationAddressPrefix": "*"
                  }
                }

              ]
            }
          },
          {
            "comments": "Network Security Group",
            "name": "[parameters('nsgAppName')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2017-09-01",
            "location": "[parameters('location')]",
            "dependsOn": [
              "[parameters('asgWeb')]","[parameters('asgApp')]"
            ],
            "properties": {
              "securityRules": [
                {
                  "name": "AllowHttpAll",
                  "properties": {
                    "description": "Allow http traffic to App servers",
                    "sourceApplicationSecurityGroups": [
                      {
                        "id": "[resourceId('Microsoft.Network/applicationSecurityGroups',parameters('asgWeb'))]"
                      }
                    ],
                    "sourcePortRange": "*",
                    "direction": "Inbound",
                    "access": "Allow",
                    "priority": 100,
                    "protocol": "Tcp",
                    "destinationPortRange": "80",
                    "destinationApplicationSecurityGroups": [
                      {
                        "id": "[resourceId('Microsoft.Network/applicationSecurityGroups',parameters('asgApp'))]"
                      }
                    ]
                  }
                }
              ]
            }
          },
          {
            "comments": "Network Security Group",
            "name": "[parameters('nsgDBName')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2017-09-01",
            "location": "[parameters('location')]",
            "dependsOn": [
              "[parameters('asgDB')]","[parameters('asgApp')]"
            ],
            "properties": {
              "securityRules": [
                {
                  "name": "AllowHttpAll",
                  "properties": {
                    "description": "Allow SQL traffic to DB servers",
                    "sourceApplicationSecurityGroups": [
                      {
                        "id": "[resourceId('Microsoft.Network/applicationSecurityGroups',parameters('asgApp'))]"
                      }
                    ],
                    "sourcePortRange": "*",
                    "direction": "Inbound",
                    "access": "Allow",
                    "priority": 100,
                    "protocol": "Tcp",
                    "destinationPortRange": "1433",
                    "destinationApplicationSecurityGroups": [
                      {
                        "id": "[resourceId('Microsoft.Network/applicationSecurityGroups',parameters('asgDB'))]"
                      }
                    ]
                  }
                }
              ]
            }
          },
          {
            "comments": "Network Security Group",
            "name": "[parameters('nsgPROCName')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2017-09-01",
            "location": "[parameters('location')]",
            "dependsOn": [
              "[parameters('asgDB')]","[parameters('asgApp')]"
            ],
            "properties": {
              "securityRules": [
                {
                  "name": "AllowHttpAll",
                  "properties": {
                    "description": "Allow SQL traffic to PROC servers",
                    "sourceApplicationSecurityGroups": [
                      {
                        "id": "[resourceId('Microsoft.Network/applicationSecurityGroups',parameters('asgApp'))]"
                      }
                    ],
                    "sourcePortRange": "*",
                    "direction": "Inbound",
                    "access": "Allow",
                    "priority": 100,
                    "protocol": "Tcp",
                    "destinationPortRange": "1433",
                    "destinationApplicationSecurityGroups": [
                      {
                        "id": "[resourceId('Microsoft.Network/applicationSecurityGroups',parameters('asgProc'))]"
                      }
                    ]
                  }
                }
              ]
            }
          },    
      {
        "apiVersion": "2015-06-15",
        "type": "Microsoft.Network/virtualNetworks",
        "name": "[parameters('vnetName')]",
        "location": "[parameters('location')]",
        "tags": "[parameters('tagValues')]",
        "dependsOn": [
          "[parameters('nsgWEBName')]",
          "[parameters('nsgAPPName')]",
          "[parameters('nsgDBName')]",
          "[parameters('nsgPROCName')]"
        ],
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "[parameters('vnetAddressPrefix')]"
            ]
          },
          "subnets": [
            {
              "name": "[parameters('subnet1Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet1Prefix')]"
              }
            },
            {
              "name": "[parameters('subnet2Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet2Prefix')]"
              }
            },
            {
              "name": "[parameters('subnet3Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet3Prefix')]",
                "networkSecurityGroup": {
                  "id": "[variables('nsgDBId')]"
                }
              }
            },
            {
              "name": "[parameters('subnet4Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet4Prefix')]",
                "networkSecurityGroup": {
                  "id": "[variables('nsgWebId')]"
                }
              }
            },
            {
              "name": "[parameters('subnet5Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet5Prefix')]",
                "networkSecurityGroup": {
                  "id": "[variables('nsgAppId')]"
                }
              }
            },
            {
              "name": "[parameters('subnet6Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet6Prefix')]"
              }
            },
            {
              "name": "[parameters('subnet7Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet7Prefix')]",
                "networkSecurityGroup": {
                  "id": "[variables('nsgPROCId')]"
                }
              }
            },
            {
              "name": "[parameters('subnet8Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet8Prefix')]"
              }
            },
            {
              "name": "[parameters('subnet9Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet9Prefix')]"
              }
            },
            {
              "name": "[parameters('subnet10Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet10Prefix')]"
              }
            },
            {
              "name": "[parameters('subnet11Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet11Prefix')]"
              }
            }
          ]
        }
      }
    ]
  }
